# DFMapCompressorPP

./: .gitignore  CMakeLists.txt  README.org  dfmapcompressorpp.js  dfmapcompressorpp.wasm  index.html  worker.js
.github/workflows/: build.yml
example-map/: Counciltools-param-region1-83-1786.txt
php/: .gitignore  composer.json  dfmappreview.php
src/: emscripten.cpp  fdf-map.cpp  fdf-map.hpp  indicators.hpp  layer.cpp  layer.hpp  main.cpp  map.cpp  map.hpp  pixelbag.cpp  pixelbag.hpp  stb_image.c  tile.cpp  tile.hpp  tileset.cpp  tileset.hpp
web/: index.html  main.js  worker.js
